--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn46.54:0.3": "Voller Liebe ",
   "sn46.54:1.1": "Einmal hielt sich der Buddha im Land der Koliyer auf, bei einem Marktflecken mit Namen Haliddavasana. ",
   "sn46.54:1.2": "Da kleideten sich mehrere Mönche und Nonnen am Morgen an, nahmen Schale und Robe und betraten Haliddavasana zum Almosengang. ",
-  "sn46.54:1.3": "Da kam ihnen in den Sinn: "
+  "sn46.54:1.3": "Da kam ihnen in den Sinn: ",
+  "sn46.54:1.4": "„Es ist zu früh für den Almosengang in Haliddavasana. "
 }
