--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn46.54:1.2": "Da kleideten sich mehrere Mönche und Nonnen am Morgen an, nahmen Schale und Robe und betraten Haliddavasana zum Almosengang. ",
   "sn46.54:1.3": "Da kam ihnen in den Sinn: ",
   "sn46.54:1.4": "„Es ist zu früh für den Almosengang in Haliddavasana. ",
-  "sn46.54:1.5": "Warum gehen wir nicht zu dem Kloster der Wanderer, die andere Wege gehen?“ "
+  "sn46.54:1.5": "Warum gehen wir nicht zu dem Kloster der Wanderer, die andere Wege gehen?“ ",
+  "sn46.54:2.1": "Und sie gingen zu dem Kloster der Wanderer, die andere Wege gehen, und tauschten dort mit den Wanderern Willkommensgrüße aus. "
 }
