--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn46.54:1.4": "„Es ist zu früh für den Almosengang in Haliddavasana. ",
   "sn46.54:1.5": "Warum gehen wir nicht zu dem Kloster der Wanderer, die andere Wege gehen?“ ",
   "sn46.54:2.1": "Und sie gingen zu dem Kloster der Wanderer, die andere Wege gehen, und tauschten dort mit den Wanderern Willkommensgrüße aus. ",
-  "sn46.54:2.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Die Wanderer sagten zu ihnen: "
+  "sn46.54:2.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Die Wanderer sagten zu ihnen: ",
+  "sn46.54:3.1": "„Werte Freunde, der Asket Gotama lehrt seine Schüler so: "
 }
