--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn46.54:1.5": "Warum gehen wir nicht zu dem Kloster der Wanderer, die andere Wege gehen?“ ",
   "sn46.54:2.1": "Und sie gingen zu dem Kloster der Wanderer, die andere Wege gehen, und tauschten dort mit den Wanderern Willkommensgrüße aus. ",
   "sn46.54:2.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Die Wanderer sagten zu ihnen: ",
-  "sn46.54:3.1": "„Werte Freunde, der Asket Gotama lehrt seine Schüler so: "
+  "sn46.54:3.1": "„Werte Freunde, der Asket Gotama lehrt seine Schüler so: ",
+  "sn46.54:3.2": "‚Kommt, Mönche und Nonnen, gebt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen, und meditiert, indem ihr eine Himmelsrichtung mit einem Herzen voller Liebe durchdringt, und die zweite und die dritte und die vierte. Ebenso nach oben, nach unten, dazwischen, überall und ringsumher; die ganze Welt durchdringt mit einem Herzen voller Liebe – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen. "
 }
