--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn46.54:3.3": "Meditiert, indem ihr eine Himmelsrichtung mit einem Herzen voller Mitgefühl durchdringt, und die zweite und die dritte und die vierte. Ebenso nach oben, nach unten, dazwischen, überall und ringsumher; die ganze Welt durchdringt mit einem Herzen voller Mitgefühl – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen. ",
   "sn46.54:3.4": "Meditiert, indem ihr eine Himmelsrichtung mit einem Herzen voller freudiger Anteilnahme durchdringt, und die zweite und die dritte und die vierte. Ebenso nach oben, nach unten, dazwischen, überall und ringsumher; die ganze Welt durchdringt mit einem Herzen voller freudiger Anteilnahme – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen. ",
   "sn46.54:3.5": "Meditiert, indem ihr eine Himmelsrichtung mit einem Herzen voller Gleichmut durchdringt, und die zweite und die dritte und die vierte. Ebenso nach oben, nach unten, dazwischen, überall und ringsumher; die ganze Welt durchdringt mit einem Herzen voller Gleichmut – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen.‘ ",
-  "sn46.54:4.1": "Auch wir lehren unsere Schüler ebenso. "
+  "sn46.54:4.1": "Auch wir lehren unsere Schüler ebenso. ",
+  "sn46.54:4.7": "Was ist nun der Unterschied zwischen der Lehre und Anleitung des Asketen Gotama und unserer?“ "
 }
