--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn46.54:3.5": "Meditiert, indem ihr eine Himmelsrichtung mit einem Herzen voller Gleichmut durchdringt, und die zweite und die dritte und die vierte. Ebenso nach oben, nach unten, dazwischen, überall und ringsumher; die ganze Welt durchdringt mit einem Herzen voller Gleichmut – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen.‘ ",
   "sn46.54:4.1": "Auch wir lehren unsere Schüler ebenso. ",
   "sn46.54:4.7": "Was ist nun der Unterschied zwischen der Lehre und Anleitung des Asketen Gotama und unserer?“ ",
-  "sn46.54:5.1": "Weder begrüßten diese Mönche und Nonnen diese Aussage der Wanderer, die andere Wege gehen, noch lehnten sie sie ab. "
+  "sn46.54:5.1": "Weder begrüßten diese Mönche und Nonnen diese Aussage der Wanderer, die andere Wege gehen, noch lehnten sie sie ab. ",
+  "sn46.54:5.2": "Sie erhoben sich von ihren Sitzen und dachten: "
 }
