Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn46.54:4.1": "Auch wir lehren unsere Schüler ebenso. ",
   "sn46.54:4.7": "Was ist nun der Unterschied zwischen der Lehre und Anleitung des Asketen Gotama und unserer?“ ",
   "sn46.54:5.1": "Weder begrüßten diese Mönche und Nonnen diese Aussage der Wanderer, die andere Wege gehen, noch lehnten sie sie ab. ",
-  "sn46.54:5.2": "Sie erhoben sich von ihren Sitzen und dachten: "
+  "sn46.54:5.2": "Sie erhoben sich von ihren Sitzen und dachten: ",
+  "sn46.54:5.3": "„Wir wollen die Bedeutung dieser Aussage vom Buddha selbst erfahren.“ "
 }
