--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn46.54:5.1": "Weder begrüßten diese Mönche und Nonnen diese Aussage der Wanderer, die andere Wege gehen, noch lehnten sie sie ab. ",
   "sn46.54:5.2": "Sie erhoben sich von ihren Sitzen und dachten: ",
   "sn46.54:5.3": "„Wir wollen die Bedeutung dieser Aussage vom Buddha selbst erfahren.“ ",
-  "sn46.54:5.4": "Nach dem Essen, als sie vom Almosengang zurückkamen, gingen sie zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Begebenheit. "
+  "sn46.54:5.4": "Nach dem Essen, als sie vom Almosengang zurückkamen, gingen sie zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Begebenheit. ",
+  "sn46.54:11.1": "„Mönche und Nonnen, wenn Wanderer, die andere Wege gehen, so sprechen, solltet ihr zu ihnen sagen: "
 }
