--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -21,5 +21,5 @@
   "sn46.54:5.3": "„Wir wollen die Bedeutung dieser Aussage vom Buddha selbst erfahren.“ ",
   "sn46.54:5.4": "Nach dem Essen, als sie vom Almosengang zurückkamen, gingen sie zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm die Begebenheit. ",
   "sn46.54:11.1": "„Mönche und Nonnen, wenn Wanderer, die andere Wege gehen, so sprechen, solltet ihr zu ihnen sagen: ",
-  "sn46.54:11.2": "‚Aber werte Freunde, wie wird die Erlösung des Herzens durch Liebe entwickelt? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? "
+  "sn46.54:11.2": "‚Aber werte Freunde, wie entwickelt man die Erlösung des Herzens durch Liebe? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? "
 }
