Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn46.54:11.3": "wie entwickelt man die Erlösung des Herzens durch Mitgefühl? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:11.4": "Wie entwickelt man die Erlösung des Herzens durch freudige Anteilnahme? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:11.5": "Wie entwickelt man die Erlösung des Herzens durch Gleichmut? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende?‘ ",
-  "sn46.54:11.6": "Wenn sie so gefragt würden, wären die Wanderer, die andere Wege gehen, überfragt und wären dazu enttäuscht. "
+  "sn46.54:11.6": "Wenn sie so gefragt würden, wären die Wanderer, die andere Wege gehen, überfragt und wären dazu enttäuscht. ",
+  "sn46.54:11.7": "Und warum? "
 }
