--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn46.54:11.9": "Ich sehe niemanden in dieser Welt mit ihren Göttern, Māras und Brahmās, unter dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen – ich sehe niemanden, der eine zufriedenstellende Antwort auf diese Fragen geben könnte, außer dem Klargewordenen oder einem seiner Schüler oder jemandem, der es von diesen gehört hat. ",
   "sn46.54:12.1": "Und wie entwickelt man die Erlösung des Herzens durch Liebe? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:12.2": "Da entwickelt ein Mönch die Erlösung des Herzens durch Liebe zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
-  "sn46.54:12.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. "
+  "sn46.54:12.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
+  "sn46.54:12.4": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut er es. "
 }
