--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn46.54:12.1": "Und wie entwickelt man die Erlösung des Herzens durch Liebe? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:12.2": "Da entwickelt ein Mönch die Erlösung des Herzens durch Liebe zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
   "sn46.54:12.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
-  "sn46.54:12.4": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut er es. "
+  "sn46.54:12.4": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut er es. ",
+  "sn46.54:12.5": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut er es. "
 }
