Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn46.54:12.4": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut er es. ",
   "sn46.54:12.5": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut er es. ",
   "sn46.54:12.6": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige sowohl in dem wahrnehme, was nicht widerwärtig ist, als auch im Widerwärtigen‘, dann tut er es. ",
-  "sn46.54:12.7": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, sowohl im Widerwärtigen wahrnehme als auch in dem, was nicht widerwärtig ist‘, dann tut er es. "
+  "sn46.54:12.7": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, sowohl im Widerwärtigen wahrnehme als auch in dem, was nicht widerwärtig ist‘, dann tut er es. ",
+  "sn46.54:12.8": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich gleichmütig bleibe, achtsam und umsichtig, und sowohl das Widerwärtige zurückweise als auch das, was nicht widerwärtig ist‘, dann tut er es. "
 }
