--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn46.54:13.1": "Und wie entwickelt man die Erlösung des Herzens durch Mitgefühl? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:13.2": "Da entwickelt eine Nonne die Erlösung des Herzens durch Mitgefühl zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
   "sn46.54:13.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
-  "sn46.54:13.4": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut sie es. … "
+  "sn46.54:13.4": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut sie es. … ",
+  "sn46.54:13.5": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich gleichmütig bleibe, achtsam und umsichtig, und sowohl das Widerwärtige zurückweise als auch das, was nicht widerwärtig ist‘, dann tut sie es. "
 }
