--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn46.54:13.7": "Der höchste Punkt der Erlösung des Herzens durch Mitgefühl ist die Dimension des unendlichen Raumes, sage ich, für eine Nonne, die nicht zu einer höheren Freiheit durchgedrungen ist. ",
   "sn46.54:14.1": "Und wie entwickelt man die Erlösung des Herzens durch freudige Anteilnahme? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:14.2": "Da entwickelt ein Mönch die Erlösung des Herzens durch freudige Anteilnahme zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
-  "sn46.54:14.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. "
+  "sn46.54:14.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
+  "sn46.54:14.4": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut er es. … "
 }
