--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn46.54:14.3": "und Gleichmut, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
   "sn46.54:14.4": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut er es. … ",
   "sn46.54:14.5": "Wenn er wünscht: ‚Dass ich doch meditieren könnte, indem ich gleichmütig bleibe, achtsam und umsichtig, und sowohl das Widerwärtige zurückweise als auch das, was nicht widerwärtig ist‘, dann tut er es. ",
-  "sn46.54:14.6": "Oder er übersteigt vollständig die Dimension des unendlichen Raumes im Wissen: ‚Bewusstsein ist unendlich‘, tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin. "
+  "sn46.54:14.6": "Oder er übersteigt vollständig die Dimension des unendlichen Raumes im Wissen: ‚Bewusstsein ist unendlich‘, tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin. ",
+  "sn46.54:14.7": "Der höchste Punkt der Erlösung des Herzens durch freudige Anteilnahme ist die Dimension des unendlichen Bewusstseins, sage ich, für einen Mönch, der nicht zu einer höheren Freiheit durchgedrungen ist. "
 }
