--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn46.54:14.6": "Oder er übersteigt vollständig die Dimension des unendlichen Raumes im Wissen: ‚Bewusstsein ist unendlich‘, tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin. ",
   "sn46.54:14.7": "Der höchste Punkt der Erlösung des Herzens durch freudige Anteilnahme ist die Dimension des unendlichen Bewusstseins, sage ich, für einen Mönch, der nicht zu einer höheren Freiheit durchgedrungen ist. ",
   "sn46.54:15.1": "Und wie entwickelt man die Erlösung des Herzens durch Gleichmut? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
-  "sn46.54:15.2": "Da entwickelt eine Nonne die Erlösung des Herzens durch Gleichmut zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung "
+  "sn46.54:15.2": "Da entwickelt eine Nonne die Erlösung des Herzens durch Gleichmut zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
+  "sn46.54:15.3": "und Gleichmut entwickelt, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. "
 }
