--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn46.54:15.1": "Und wie entwickelt man die Erlösung des Herzens durch Gleichmut? Was ist ihre Bestimmung, ihr höchster Punkt, ihre Frucht und ihr Ende? ",
   "sn46.54:15.2": "Da entwickelt eine Nonne die Erlösung des Herzens durch Gleichmut zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
   "sn46.54:15.3": "und Gleichmut entwickelt, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
-  "sn46.54:15.4": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut sie es. "
+  "sn46.54:15.4": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut sie es. ",
+  "sn46.54:15.5": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut sie es. "
 }
