Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn46.54:15.2": "Da entwickelt eine Nonne die Erlösung des Herzens durch Gleichmut zusammen mit den Faktoren des Erwachens Achtsamkeit, Erforschung der Gesetzmäßigkeiten, Energie, Ekstase, Stille, Versenkung ",
   "sn46.54:15.3": "und Gleichmut entwickelt, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
   "sn46.54:15.4": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut sie es. ",
-  "sn46.54:15.5": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut sie es. "
+  "sn46.54:15.5": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut sie es. ",
+  "sn46.54:15.6": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige sowohl in dem wahrnehme, was nicht widerwärtig ist, als auch im Widerwärtigen‘, dann tut sie es. "
 }
