--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "sn46.54:15.3": "und Gleichmut entwickelt, die aus Abgeschiedenheit, Schwinden und Aufhören erwachsen und zum Loslassen heranreifen. ",
   "sn46.54:15.4": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige in dem wahrnehme, was nicht widerwärtig ist‘, dann tut sie es. ",
   "sn46.54:15.5": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut sie es. ",
-  "sn46.54:15.6": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige sowohl in dem wahrnehme, was nicht widerwärtig ist, als auch im Widerwärtigen‘, dann tut sie es. "
+  "sn46.54:15.6": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige sowohl in dem wahrnehme, was nicht widerwärtig ist, als auch im Widerwärtigen‘, dann tut sie es. ",
+  "sn46.54:15.7": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, sowohl im Widerwärtigen wahrnehme als auch in dem, was nicht widerwärtig ist‘, dann tut sie es. "
 }
