--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn46.54:15.5": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, im Widerwärtigen wahrnehme‘, dann tut sie es. ",
   "sn46.54:15.6": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das Widerwärtige sowohl in dem wahrnehme, was nicht widerwärtig ist, als auch im Widerwärtigen‘, dann tut sie es. ",
   "sn46.54:15.7": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich das, was nicht widerwärtig ist, sowohl im Widerwärtigen wahrnehme als auch in dem, was nicht widerwärtig ist‘, dann tut sie es. ",
-  "sn46.54:15.8": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich gleichmütig bleibe, achtsam und umsichtig, und sowohl das Widerwärtige zurückweise als auch das, was nicht widerwärtig ist‘, dann tut sie es. "
+  "sn46.54:15.8": "Wenn sie wünscht: ‚Dass ich doch meditieren könnte, indem ich gleichmütig bleibe, achtsam und umsichtig, und sowohl das Widerwärtige zurückweise als auch das, was nicht widerwärtig ist‘, dann tut sie es. ",
+  "sn46.54:15.9": "Oder sie übersteigt vollständig die Dimension des unendlichen Bewusstseins im Wissen: ‚da ist überhaupt nichts‘, tritt in die Dimension des Nichts ein und verweilt darin. "
 }
