Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -108,5 +108,5 @@
   "mn4:20.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:20.2": "‘અમુક રાતો ખાસ કરીને શુકનવાળી હોય છે—",
   "mn4:20.3": "જેમ કે પક્ષની અમાસ, પૂનમ, અને અષ્ટમી—",
-  "mn4:20.4": "હવે ધારોકે આવી રાતે હું અહીં તહીં બાગમાં કે વનમાં કે ઝાડ પાસેના મંદિરોમાં આશ્રય લઉં"
+  "mn4:20.4": "હવે ધારોકે આવી રાતે હું અહીં તહીં બાગમાં કે વનમાં કે ઝાડ પાસેના ભયાનક અને રોમાંચકારક મંદિરોમાં આશ્રય લઉં તો મને કદાચ એવો ભય અને રોમાંચ અનુભવવા અને જોવા મળે’."
 }
