--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -110,5 +110,6 @@
   "mn4:20.3": "જેમ કે પક્ષની અમાસ, પૂનમ, અને અષ્ટમી—",
   "mn4:20.4": "હવે ધારોકે આવી રાતે હું અહીં તહીં બાગમાં કે વનમાં કે ઝાડ પાસેના ભયાનક અને રોમાંચકારક મંદિરોમાં આશ્રય લઉં તો મને કદાચ એવો ભય અને રોમાંચ અનુભવવા અને જોવા મળે’.",
   "mn4:20.5": "તો બ્રાહ્મણ, થોડા વખત પછી અમુક ખાસ કરીને શુકનવાળી રાતો—",
-  "mn4:20.6": "જેમ કે પક્ષની અમાસ, પૂનમ, અને અષ્ટમી—"
+  "mn4:20.6": "જેમ કે પક્ષની અમાસ, પૂનમ, અને અષ્ટમી—",
+  "mn4:20.7": "એવી રાતે મેં અહીં તહીં બાગમાં કે વનમાં કે ઝાડ પાસેના ભયાનક અને રોમાંચકારક મંદિરોમાં આશ્રય લીધો."
 }
