--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "sn22.79:2.1": "Und warum nennt man es Form? ",
   "sn22.79:2.2": "Es verformt sich; darum nennt man es ‚Form‘. ",
   "sn22.79:2.3": "Wodurch verformt es sich? ",
-  "sn22.79:2.4": "Es ist verformt durch Kälte, Hitze, Hunger, Durst und durch die Berührung von Fliegen, Stechmücken, Wind, Sonne und Kriechtieren. ",
+  "sn22.79:2.4": "Es verformt sich durch Kälte, Hitze, Hunger, Durst und durch die Berührung von Fliegen, Stechmücken, Wind, Sonne und Kriechtieren. ",
   "sn22.79:2.5": "Es ist verformt; darum nennt man es ‚Form‘. ",
   "sn22.79:3.1": "Und warum nennt man es Gefühl? ",
   "sn22.79:3.2": "Es fühlt; darum nennt man es ‚Gefühl‘. ",
