--- a/translation/fr/sekha/sutta/an/an1/an1.1-10_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an1/an1.1-10_translation-fr-sekha.json
@@ -5,7 +5,7 @@
   "an1.1:1.0": "1",
   "an1.1:1.1": "Ainsi ai-je entendu :",
   "an1.1:1.2": "Un jour, le Fortuné séjournait à Savatthi, dans le bois de Jéta, le parc d’Anathapindika.",
-  "an1.1:1.3": "En ce jour-là, il s’adressa aux mendiants :",
+  "an1.1:1.3": "Là, il s’adressa aux mendiants :",
   "an1.1:1.4": "«Mendiants !»",
   "an1.1:1.5": "«Maître», lui répondirent les mendiants.",
   "an1.1:1.6": "Le Fortuné leur dit alors :",
