Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.5_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.5_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.5_translation-fr-sekha.json
@@ -2,7 +2,7 @@
   "an11.5:0.1": "Discours Sous Forme De Listes 11.5",
   "an11.5:0.2": "Chapitre 1 - Dépendance",
   "an11.5:0.3": "La condition sinéquanone (3)",
-  "an11.5:1.1": "En ce jour-là, le vénérable Ananda s’adressa aux mendiants (…)",
+  "an11.5:1.1": "Là, le vénérable Ananda s’adressa aux mendiants (…)",
   "an11.5:1.2": "«Amis, pour celui qui manque de vertu, chez qui la vertu fait défaut, la condition sinéquanone de l’absence de remords est ruinée.",
   "an11.5:1.3": "Lorsqu’il n’y a pas d’absence de remords, lorsque l’absence de remords fait défaut, la condition sinéquanone de la joie est ruinée.",
   "an11.5:1.4": "Lorsqu’il n’y a pas de joie, lorsque la joie fait défaut, la condition sinéquanone de l’exaltation est ruinée.",
