--- a/translation/fr/sekha/sutta/an/an11/an11.4_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.4_translation-fr-sekha.json
@@ -2,7 +2,7 @@
   "an11.4:0.1": "Discours Sous Forme De Listes 11.4",
   "an11.4:0.2": "Chapitre 1 - Dépendance",
   "an11.4:0.3": "La condition sinéquanone (2)",
-  "an11.4:1.1": "En ce jour-là, le vénérable Saripoutta s’adressa aux mendiants :",
+  "an11.4:1.1": "Là, le vénérable Saripoutta s’adressa aux mendiants :",
   "an11.4:1.2": "«Mendiants, mes amis.»",
   "an11.4:1.3": "«Ami» répondirent-ils.",
   "an11.4:1.4": "Le vénérable Saripoutta dit alors :",
