--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -175,7 +175,7 @@
   "pli-tv-kd11:5.1.21": "The eighteen kinds of conduct in regard to the legal procedure of condemnation are finished. ",
   "pli-tv-kd11:6.1.0": "1.5 The group of eighteen on not to be lifted ",
   "pli-tv-kd11:6.1.1": "When the Sangha had done a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka, ",
-  "pli-tv-kd11:6.1.2": "they conducted themselves properly and suitably so as to deserve to be released. They then went to the monks ",
+  "pli-tv-kd11:6.1.2": "they conducted themselves properly and suitably, and deserved to be released. They then went to the monks ",
   "pli-tv-kd11:6.1.3": "and told them about this, adding, “What should we do now?” ",
   "pli-tv-kd11:6.1.4": "The monks told the Buddha … ",
   "pli-tv-kd11:6.1.5": "",
