--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -199,7 +199,7 @@
   "pli-tv-kd11:7.1.11": "The group of eighteen on to be lifted is finished. ",
   "pli-tv-kd11:8.1.1": "“And this is how it should be lifted. ",
   "pli-tv-kd11:8.1.2": "After approaching the Sangha, the monks Paṇḍuka and Lohitaka should put their upper robes over one shoulder, pay respect at the feet of the senior monks, squat on their heels, raise their joined palms, and say, ",
-  "pli-tv-kd11:8.1.3": "‘Venerables, the Sangha has done a legal procedure of condemnation against us, but we have conducted ourselves properly and suitably so as to deserve to be released. We ask for that legal procedure to be lifted.’ ",
+  "pli-tv-kd11:8.1.3": "‘Venerables, the Sangha has done a legal procedure of condemnation against us. We’re now conducting ourselves properly and suitably, and deserve to be released. We ask for that legal procedure to be lifted.’ ",
   "pli-tv-kd11:8.1.4": "And they should ask a second ",
   "pli-tv-kd11:8.1.5": "and a third time. ",
   "pli-tv-kd11:8.1.6": "A competent and capable monk should then inform the Sangha: ",
