--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -204,8 +204,8 @@
   "pli-tv-kd11:8.1.5": "and a third time. ",
   "pli-tv-kd11:8.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:8.2.1": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:8.2.2": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
-  "pli-tv-kd11:8.2.3": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
+  "pli-tv-kd11:8.2.2": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They’re now conducting themselves properly and suitably, and deserve to be released. They’re asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:8.2.3": "If it seems appropriate to the Sangha, the Sangha should lift that legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.4": "This is the motion. ",
   "pli-tv-kd11:8.2.5": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:8.2.6": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
