Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -208,13 +208,13 @@
   "pli-tv-kd11:8.2.3": "If it seems appropriate to the Sangha, the Sangha should lift that legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.4": "This is the motion. ",
   "pli-tv-kd11:8.2.5": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:8.2.6": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
-  "pli-tv-kd11:8.2.7": "The Sangha lifts the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
+  "pli-tv-kd11:8.2.6": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They’re now conducting themselves properly and suitably, and deserve to be released. They’re asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:8.2.7": "The Sangha lifts that legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.8": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:8.2.9": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:8.2.10": "For the second time I speak on this matter. ",
   "pli-tv-kd11:8.2.11": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:8.2.12": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
+  "pli-tv-kd11:8.2.12": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They’re now conducting themselves properly and suitably, and deserve to be released. They’re asking for that legal procedure to be lifted. ",
   "pli-tv-kd11:8.2.13": "The Sangha lifts the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.14": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:8.2.15": "Any monk who doesn’t approve should speak up. ",
