Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -415,13 +415,13 @@
   "pli-tv-kd11:12.2.10": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:12.2.11": "For the second time I speak on this matter. ",
   "pli-tv-kd11:12.2.12": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:12.2.13": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:12.2.14": "The Sangha lifts the legal procedure of demotion against the monk Seyyasaka. ",
+  "pli-tv-kd11:12.2.13": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:12.2.14": "The Sangha lifts that legal procedure of demotion against the monk Seyyasaka. ",
   "pli-tv-kd11:12.2.15": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:12.2.16": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:12.2.17": "For the third time I speak on this matter. ",
   "pli-tv-kd11:12.2.18": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:12.2.19": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
+  "pli-tv-kd11:12.2.19": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
   "pli-tv-kd11:12.2.20": "The Sangha lifts the legal procedure of demotion against the monk Seyyasaka. ",
   "pli-tv-kd11:12.2.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:12.2.22": "Any monk who doesn’t approve should speak up. ",
