Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -495,7 +495,7 @@
   "pli-tv-kd11:13.6.33": "“Well then, take many monks.” ",
   "pli-tv-kd11:13.6.34": "“Alright.” ",
   "pli-tv-kd11:13.7.1": "“And this is how it should be done. ",
-  "pli-tv-kd11:13.7.2": "First you should accuse the monks Assaji and Punabbasuka. They should then be reminded of what they have done, before they are charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:13.7.2": "First you should accuse the monks Assaji and Punabbasuka. They should then be reminded of what they’ve done, before they’re charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:13.7.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:13.7.4": "These monks, Assaji and Punabbasuka, are corrupters of families and badly behaved. ",
   "pli-tv-kd11:13.7.5": "Their bad behavior is seen and heard about, ",
