Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -630,7 +630,7 @@
   "pli-tv-kd11:16.1.25": "This will affect people’s confidence …” ",
   "pli-tv-kd11:16.1.26": "After rebuking them … ",
   "pli-tv-kd11:16.1.27": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd11:16.1.28": "“Well then, don’t lift that legal procedure of banishment. ",
+  "pli-tv-kd11:16.1.28": "“Well then, don’t lift that legal procedure of banishment.” ",
   "pli-tv-kd11:16.2.0": "3.5 The group of eighteen on not to be lifted ",
   "pli-tv-kd11:16.2.1": "“When a monk has five qualities, a legal procedure of banishing him shouldn’t be lifted: ",
   "pli-tv-kd11:16.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
