Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -647,21 +647,21 @@
   "pli-tv-kd11:16.2.16": "he doesn’t commit the same offense for which the Sangha did the procedure of banishing him; he doesn’t commit an offense similar to the one for which the Sangha did the procedure of banishing him; he doesn’t commit an offense worse than the one for which the Sangha did the procedure of banishing him; ",
   "pli-tv-kd11:16.2.17": "he doesn’t criticize the procedure; he doesn’t criticize those who did the procedure. ",
   "pli-tv-kd11:16.2.19": "When a monk has eight qualities, a procedure of banishing him should be lifted: ",
-  "pli-tv-kd11:16.2.20": "he doesn’t cancel the observance-day ceremony of a regular monk; he doesn’t cancel the invitation ceremony of a regular monk; he doesn’t direct a regular monk; he doesn’t give instructions to a regular monk from a position of authority; he doesn’t get permission from a regular monk to correct him; he doesn’t accuse a regular monk of an offense; he doesn’t remind a regular monk of an offense; he doesn’t associate inappropriately with other monks.” ",
+  "pli-tv-kd11:16.2.20": "he doesn’t cancel the observance-day ceremony of a regular monk; he doesn’t cancel the invitation ceremony of a regular monk; he doesn’t direct a regular monk; he doesn’t give instructions to a regular monk; he doesn’t get permission from a regular monk to correct him; he doesn’t accuse a regular monk of an offense; he doesn’t remind a regular monk of an offense; he doesn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:16.2.22": "The group of eighteen on to be lifted is finished. ",
   "pli-tv-kd11:17.1.1": "“And this is how it should be lifted. ",
   "pli-tv-kd11:17.1.2": "After approaching the Sangha, the monk who’s had a legal procedure of banishment done against himself should put his upper robes over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
-  "pli-tv-kd11:17.1.3": "‘Venerables, the Sangha has done a legal procedure of banishing me, but I’ve conducted myself properly and suitably so as to deserve to be released. I ask for that legal procedure to be lifted.’ ",
+  "pli-tv-kd11:17.1.3": "‘Venerables, the Sangha has done a legal procedure of banishing me. I’m now conducting myself properly and suitably, and deserve to be released. I ask for that legal procedure to be lifted.’ ",
   "pli-tv-kd11:17.1.4": "And he should ask a second ",
   "pli-tv-kd11:17.1.5": "and a third time. ",
   "pli-tv-kd11:17.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:17.2.1": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:17.2.2": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:17.2.3": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of banishing him. ",
+  "pli-tv-kd11:17.2.2": "The Sangha has done a legal procedure of banishing monk so-and-so. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:17.2.3": "If it seems appropriate to the Sangha, the Sangha should lift that legal procedure of banishing him. ",
   "pli-tv-kd11:17.2.4": "This is the motion. ",
   "pli-tv-kd11:17.2.5": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:17.2.6": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:17.2.7": "The Sangha lifts the legal procedure of banishing him. ",
+  "pli-tv-kd11:17.2.6": "The Sangha has done a legal procedure of banishing monk so-and-so. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:17.2.7": "The Sangha lifts that legal procedure of banishing him. ",
   "pli-tv-kd11:17.2.8": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:17.2.9": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:17.2.10": "For the second time I speak on this matter. … ",
