Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -817,7 +817,7 @@
   "pli-tv-kd11:21.1.13": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:21.1.14": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:21.1.15": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd11:21.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
+  "pli-tv-kd11:21.1.16": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd11:21.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:21.1.18": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:21.1.19": "He shouldn’t remind a regular monk of an offense. ",
