Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -903,7 +903,7 @@
   "pli-tv-kd11:24.1.20": "The Sangha lifts that legal procedure of reconciliation against him. ",
   "pli-tv-kd11:24.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:24.1.22": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd11:24.1.23": "The Sangha has lifted the legal procedure of reconciliation against the monk Sudhamma. ",
+  "pli-tv-kd11:24.1.23": "The Sangha has lifted that legal procedure of reconciliation against the monk Sudhamma. ",
   "pli-tv-kd11:24.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:24.1.25": "The fourth section on the legal procedure of reconciliation is finished. ",
   "pli-tv-kd11:25.1.0": "5. The legal procedure of ejection for not recognizing an offense ",
