Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -951,7 +951,7 @@
   "pli-tv-kd11:25.2.26": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:25.2.27": "Monks, you should proclaim from monastery to monastery ",
   "pli-tv-kd11:25.2.28": "that the Sangha has done a legal procedure of ejecting Channa for not recognizing an offense, ",
-  "pli-tv-kd11:25.2.29": "prohibiting him from living with the Sangha. ",
+  "pli-tv-kd11:25.2.29": "prohibiting him from living with the Sangha.” ",
   "pli-tv-kd11:26.1.0": "5.1 The group of twelve on illegitimate legal procedures ",
   "pli-tv-kd11:26.1.1": "“When a legal procedure of ejection for not recognizing an offense has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:26.1.2": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
