Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1062,7 +1062,7 @@
   "pli-tv-kd11:28.1.11": "and told them about this, ",
   "pli-tv-kd11:28.1.12": "adding, “What should I do now?” ",
   "pli-tv-kd11:28.1.13": "The monks told the Buddha. He had the monks gathered and said, ",
-  "pli-tv-kd11:28.1.14": "“Well then, lift that legal procedure of ejecting the monk Channa for not recognizing an offense. ",
+  "pli-tv-kd11:28.1.14": "“Well then, lift that legal procedure of ejecting the monk Channa for not recognizing an offense.” ",
   "pli-tv-kd11:28.2.0": "5.5 The group of forty-three on not to be lifted ",
   "pli-tv-kd11:28.2.1": "“When a monk has five qualities, a legal procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
