Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1083,7 +1083,7 @@
   "pli-tv-kd11:28.2.23": "he doesn’t get up from his seat when he sees a regular monk; ",
   "pli-tv-kd11:28.2.24": "he dismisses a regular monk, whether indoors or outdoors. ",
   "pli-tv-kd11:28.2.26": "When a monk has eight qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
-  "pli-tv-kd11:28.2.27": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he directs a regular monk; he gives instructions to a regular monk from a position of authority; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
+  "pli-tv-kd11:28.2.27": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he directs a regular monk; he gives instructions to a regular monk; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
   "pli-tv-kd11:28.2.29": "The group of forty-three on not to be lifted in regard to the legal procedure of ejection for not recognizing an offense is finished. ",
   "pli-tv-kd11:29.1.0": "5.6 The group of forty-three on to be lifted ",
   "pli-tv-kd11:29.1.1": "“When a monk has five qualities, a legal procedure of ejecting him for not recognizing an offense should be lifted: ",
