Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1122,8 +1122,8 @@
   "pli-tv-kd11:30.1.16": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:30.1.17": "For the third time I speak on this matter. ",
   "pli-tv-kd11:30.1.18": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:30.1.19": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:30.1.20": "The Sangha lifts the legal procedure of ejecting him for not recognizing an offense. ",
+  "pli-tv-kd11:30.1.19": "The Sangha has done a legal procedure of ejecting the monk Channa for not recognizing an offense. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:30.1.20": "The Sangha lifts that legal procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:30.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:30.1.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:30.1.23": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not recognizing an offense. ",
