Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1133,7 +1133,7 @@
   "pli-tv-kd11:31.1.1": "At one time the Buddha was staying at Kosambī in Ghosita’s Monastery. ",
   "pli-tv-kd11:31.1.2": "At this time Venerable Channa had committed an offense, but refused to make amends for it. ",
   "pli-tv-kd11:31.1.3": "The monks of few desires complained and criticized him, ",
-  "pli-tv-kd11:31.1.4": "“How can Venerable Channa commit an offense, but then refuse to make amends for it?” ",
+  "pli-tv-kd11:31.1.4": "“How can Venerable Channa commit an offense, but refuse to make amends for it?” ",
   "pli-tv-kd11:31.1.5": "They told the Buddha. ",
   "pli-tv-kd11:31.1.6": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
   "pli-tv-kd11:31.1.7": "“Is it true, monks, that Channa is acting like this?” ",
