Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1140,7 +1140,7 @@
   "pli-tv-kd11:31.1.8": "“It’s true, Sir.” ",
   "pli-tv-kd11:31.1.9": "The Buddha rebuked him, ",
   "pli-tv-kd11:31.1.10": "“It’s not suitable … ",
-  "pli-tv-kd11:31.1.11": "How can Channa commit an offense, but then refuse to make amends for it? ",
+  "pli-tv-kd11:31.1.11": "How can Channa commit an offense, but refuse to make amends for it? ",
   "pli-tv-kd11:31.1.12": "This will affect people’s confidence …” ",
   "pli-tv-kd11:31.1.13": "After rebuking him … ",
   "pli-tv-kd11:31.1.14": "he gave a teaching and addressed the monks: ",
