Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1266,7 +1266,7 @@
   "pli-tv-kd11:31.1.140": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:31.1.141": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:31.1.142": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd11:31.1.143": "He shouldn’t give instructions to a regular monk from a position of authority. ",
+  "pli-tv-kd11:31.1.143": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd11:31.1.144": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:31.1.145": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:31.1.146": "He shouldn’t remind a regular monk of an offense. ",
