Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1281,7 +1281,7 @@
   "pli-tv-kd11:31.1.155": "Because of this, he left that monastery too and went to yet another one. ",
   "pli-tv-kd11:31.1.156": "There too the monks did not bow down to him, stand up for him, raise their joined palms to him, or do acts of respect toward him. They did not honor, respect, or esteem him. ",
   "pli-tv-kd11:31.1.157": "Because of this, he left that monastery too and returned to Kosambī. ",
-  "pli-tv-kd11:31.1.158": "He then conducted himself properly and suitably so as to deserve to be released. He went to the monks ",
+  "pli-tv-kd11:31.1.158": "He then conducted himself properly and suitably, and deserved to be released. He went to the monks ",
   "pli-tv-kd11:31.1.159": "and told them about this, ",
   "pli-tv-kd11:31.1.160": "adding, “What should I do now?” ",
   "pli-tv-kd11:31.1.161": "The monks told the Buddha. He had the monks gathered and said, ",
