Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1284,7 +1284,7 @@
   "pli-tv-kd11:31.1.158": "He then conducted himself properly and suitably, and deserved to be released. He went to the monks ",
   "pli-tv-kd11:31.1.159": "and told them about this, ",
   "pli-tv-kd11:31.1.160": "adding, “What should I do now?” ",
-  "pli-tv-kd11:31.1.161": "The monks told the Buddha. He had the monks gathered and said, ",
+  "pli-tv-kd11:31.1.161": "The monks told the Buddha. … ",
   "pli-tv-kd11:31.1.162": "“Well then, lift that legal procedure of ejecting the monk Channa for not making amends for an offense. ",
   "pli-tv-kd11:31.1.163.0": "6.5 The group of forty-three on not to be lifted ",
   "pli-tv-kd11:31.1.163.1": "“When a monk has five qualities, a legal procedure of ejecting him for not making amends for an offense shouldn’t be lifted: ",
